[package]
name = "solanabench"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "BotWebServer"
path = "src/BotWebServer/main.rs"


[[bin]]
name = "BotSimulator"
path = "src/BotSimulator/main.rs"

[workspace]

[dependencies]
tonic = { version = "0.14", features = ["zstd", "gzip", "tls-native-roots", "tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"

unshred = { git = "https://github.com/dyodx/unshred" }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-system-interface = "1"

base64 = "0.21"
bincode = "1.3"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.99"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = { version = "9.0.0", features = ["plugin"] }
futures-util = "0.3.31"
backoff = "0.4.0"
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
solana-hash = "2.3.0"
solana-pubkey = "2.4.0"
solana-signature = "2.3.0"
chrono = "0.4.41"
hex = "0.4.3"
solana-transaction-status = "2.3.1"
axum = "0.7.9"
once_cell = "1.21.3"



[build-dependencies]
tonic-prost-build = "0.14"


